# Exchangerates-Converter

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
alembic/: env.py
alembic/versions/: 18a245d9547d_init.py
src/: base_dependencies.py  base_schemas.py  config.py  constants.py  main.py  redis.py  utils.py
src/api_v1/: db_models.py  dependencies.py  router.py  schemas.py  services.py
src/database/: base.py  database.py
src/external_services/: abstract_exchange_api_service.py  exchangerates_api.py  openexchangerates_api.py
src/external_services/response_schemas/: schemas.py
