[tool.poetry]
name = "assigment-exchangerateconvertion"
version = "0.1.0"
description = ""
authors = ["Dmitry Gorokhov <gorokhov86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
httpx = "^0.25.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
pycountry = "^22.3.5"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
